--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/gas_stations?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&useLegacyDatetimeCode=false
 spring.datasource.username=root
 spring.datasource.password=coderslab
-
-
-#Hibernate
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-
-#Hibernate auto ddl
-spring.jpa.hibernate.ddl-auto=update
-
+spring.jpa.hibernate.ddl-auto=none
 logging.level.org.hibernate.SQL=DEBUG
+spring.jpa.properties.hibernate.format_sql=true
